--- a/_posts/2018-09-02-ludum-dare-42.md
+++ b/_posts/2018-09-02-ludum-dare-42.md
@@ -2,6 +2,7 @@
 layout: post
 title: "Ludum Dare 42 game jam: our experience"
 cover_image: /assets/blog-images/2018-09-05-cover.jpg
+comments: true
 ---
 
 Last month Wise Hedgehog Studio team took part in [Ludum Dare 42 game jam](https://ldjam.com/). A game jam is an accelerated game development competition. Ludum Dare is the oldest and widely known online jam. It is held three times a year. You have two or three days to create a game that fits a given theme. This time participants submitted over three thousands games!
