More fixes to schema.org markup

--- a/_posts/2018-09-02-ludum-dare-42.md
+++ b/_posts/2018-09-02-ludum-dare-42.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Ludum Dare 42 game jam: our experience"
-cover_image: /assets/blog-images/2018-09-05-cover.jpg
+image: /assets/blog-images/2018-09-05-cover.jpg
 comments: true
 ---
 
