--- a/_posts/2018-09-02-ludum-dare-42.md
+++ b/_posts/2018-09-02-ludum-dare-42.md
@@ -12,7 +12,7 @@ Last month [Wise Hedgehog Studio](https://wisehedgehog.studio) team took part in
 
 It's our second time participating in Ludum Dare, and we loved the experience. Over the weekend we created a little puzzle game “No Space In My Stomach” about an extraterrestrial snail Stewart.
 
-<iframe allowfullscreen src="https://www.youtube.com/embed/X7WfU53GP1o"></iframe>
+{% youtube X7WfU53GP1o %}
 
 **[Play “No Space In My Stomach” at itch.io](https://wisehedgehog.itch.io/no-space-in-my-stomach)**
 
