Proper og:description and page types Updated About page Proper CV in PDF format

--- a/_posts/2018-09-02-ludum-dare-42.md
+++ b/_posts/2018-09-02-ludum-dare-42.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: "Ludum Dare 42 game jam: our experience"
+description: "How we created “No Space In My Stomach” in just 72 hours"
 image: /assets/blog-images/2018-09-05-cover.jpg
 tags: [gamedev]
 ---
