New article about PICOCHAK. Improved layout of the home page

--- a/_posts/2018-09-02-ludum-dare-42.md
+++ b/_posts/2018-09-02-ludum-dare-42.md
@@ -1,14 +1,12 @@
 ---
 layout: post
 title: "Ludum Dare 42 game jam: our experience"
-description: "How we created “No Space In My Stomach” in just 72 hours"
+description: "How we created “No Space In My Stomach” in just 72 hours."
 image: /assets/blog-images/2018-09-05-cover.jpg
 tags: [gamedev]
 ---
 
 Last month [Wise Hedgehog Studio](https://wisehedgehog.studio) team took part in [Ludum Dare 42 game jam](https://ldjam.com/). A game jam is an accelerated game development competition. Ludum Dare is the oldest and widely known online jam. It is held three times a year. You have two or three days to create a game that fits a given theme. This time participants submitted over three thousands games!
-
-<!--more-->
 
 It's our second time participating in Ludum Dare, and we loved the experience. Over the weekend we created a little puzzle game “No Space In My Stomach” about an extraterrestrial snail Stewart.
 
@@ -83,7 +81,7 @@ Anna and Stanislav finished their work by evening, and the game was almost compl
 
 The third day was Monday, and we all have our daily jobs, so there wasn't much time to work on the game. So I just added saving game progress and a little tutorial, integrated GameAnalytics, and, finally, published the game. We did it!
 
----- 
+----
 
 Now, when the jam is over, and we collected much feedback, it's time to retrospect our work.
 
@@ -109,6 +107,6 @@ Now, when the jam is over, and we collected much feedback, it's time to retrospe
 - The platformer library we used is a new one and has some bugs. The main problem is that you can't jump from a platform which is moving down.
 - Several people said that the music was repetitive and too loud. Unfortunately, I didn't have much time to write a longer track and my experience in game music is not that big, the background music is still a challenge for me.
 
----- 
+----
 
 Ludum Dare 42 was a fantastic experience for our team. We're looking forward to taking part in the next jam in December!
